--- a/index.html
+++ b/index.html
@@ -1,3 +1,45 @@
-<?php get_header(); ?>
+<!DOCTYPE html>
+<html lang="eng">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width initial-scale=1">
+	<title>Sic Semper Typos</title>
+	<meta name="description" contents="Hello World">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link href='http://fonts.googleapis.com/css?family=Nothing+You+Could+Do' rel='stylesheet' type='text/css'>	
+	<link rel="stylesheet" type="text/css" media="all" href="css/custom.css"/>
+</head>
+<body>
 
-<?php get_footer(); ?>
+	<div class="content">
+		<div class="row">
+			This is the banner
+		</div>
+		<div class="row">
+			<div class="cell vert">
+				<div class="para-1">
+					Lorem ipsum
+				</div>
+				<div class="para-2">
+					Lorem upsom
+				</div>
+				<div class="para-3">
+					Lorem ipsum
+				</div>
+				<div class="para-4">
+					Lorem upsom
+				</div>
+				<div class="para-5">
+					Lorem ipsum
+				</div>
+				<div class="para-6">
+					Lorem upsom
+				</div>
+			</div>
+			<div class="cell john">
+				<img class="img" src="aboutjohn_400px.jpg">
+			</div>
+		</div>
+	</div>
+</body>
