Experimenting with flexbox have images showing.

--- a/index.html
+++ b/index.html
@@ -18,27 +18,28 @@
 		</div>
 		<div class="row">
 			<div class="cell vert">
-				<div class="para-1">
+			<img class="img-responsive" src="images/Scroll Vertical.png">
+				<div class="para para-1">
 					Lorem ipsum
 				</div>
-				<div class="para-2">
+				<div class="para para-2">
 					Lorem upsom
 				</div>
-				<div class="para-3">
+				<div class="para para-3">
 					Lorem ipsum
 				</div>
-				<div class="para-4">
+				<div class="para para-4">
 					Lorem upsom
 				</div>
-				<div class="para-5">
+				<div class="para para-5">
 					Lorem ipsum
 				</div>
-				<div class="para-6">
+				<div class="para para-6">
 					Lorem upsom
 				</div>
 			</div>
-			<div class="cell john">
-				<img class="img" src="aboutjohn_400px.jpg">
+			<div class="cell john">This is a test
+				<img class="img" src="images/aboutjohn_400px.jpg" text="About John">
 			</div>
 		</div>
 	</div>
