added css/fiddle.css, other adjustments

--- a/index.html
+++ b/index.html
@@ -11,14 +11,56 @@
 	<link rel="stylesheet" type="text/css" media="all" href="css/custom.css"/>
 </head>
 <body>
-
+	<div class="container first-container">
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<a class="navbar-brand" href="#">SST</a>
+				<button class="navbar-toggle" data-target=".navbar-responsive-collapse" data-toggle="collapse" type="button">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<div class="navbar-collapse collapse navbar-responsive-collapse">
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Home</a></li>
+						<li><a href="#"><span class="glyphicon glyphicon-edit"></span> Services & Rates</a></li>
+						<li><a href="#"><span class="glyphicon glyphicon-book"></span> Portfolio</a></li>
+						<li><a href="contactForm.html"><span class="glyphicon glyphicon-user"></span> About/Contact John</a></li>
+						<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
+					</ul>
+					<form class="navbar-form float-right">
+						<input type="text" class="form-control" placeholder="Search" id="searchinput">
+							<button type="submit" class="btn btn-default">
+								<span class="glyphicon glyphicon-search"></span>
+							</button>
+						</input>
+					</form>
+				</div><!-- Nav-collapse -->
+			</div><!-- Container -->
+		</nav>
+	</div><!--Container-->
+	<header>
+		<div class="container header-container">
+				<div class="banner header-scroll img-responsive">
+				<img class="img-responsive float-left" src="images/Sic Semper Scroll.png"/>
+					<h1 class="visible-lg-inline">Sic Semper Typos
+						<p>Thus always to typos<p>
+					</h1>
+					<h2 class="visible-md-inline">Sic Semper Typos
+						<p>Thus always to typos<p>
+					</h2>
+					<h3 class="visible-sm-inline">Sic Semper Typos
+						<p>Thus always to typos<p>
+					</h3>
+					<h4 class="visible-xs-inline"><strong>Sic Semper Typos</strong>
+						<p>Thus always to typos<p>
+					</h4>
+				</div>
+	</header>	<!-- Opening scroll-->
 	<div class="content">
 		<div class="row">
-			This is the banner
-		</div>
-		<div class="row">
 			<div class="cell vert">
-			<img class="img-responsive" src="images/Scroll Vertical.png">
+				<!--<img class="img-responsive vert-scroll" src="images/Scroll Vertical.png"/>-->
 				<div class="para para-1">
 					Lorem ipsum
 				</div>
