Have the sidebar with John's picture working right.

--- a/index.html
+++ b/index.html
@@ -58,30 +58,46 @@
 				</div>
 	</header>	<!-- Opening scroll-->
 	<div class="content">
-		<div class="row">
-			<div class="cell vert">
-				<!--<img class="img-responsive vert-scroll" src="images/Scroll Vertical.png"/>-->
+		<!--<div class="row main">-->
+			<div class="cell vert main-scroll">
+				<div class="para para-scrollbar">A
+				</div>
 				<div class="para para-1">
-					Lorem ipsum
+					Your story must be told.
+					It is <span id="fontepic">epic.</span> It is profound.
+					It is like nothing ever written.
 				</div>
 				<div class="para para-2">
-					Lorem upsom
+					But your grammar is atrocious
+					Your spelling is dreadful.
+					Your prose is lacking
 				</div>
 				<div class="para para-3">
-					Lorem ipsum
+					Your story is one for the <span id="ages">AGES,</span> but you do not have the words
+					with which to express it.
 				</div>
 				<div class="para para-4">
-					Lorem upsom
+					<span id="ido">I do.</span>
 				</div>
 				<div class="para para-5">
-					Lorem ipsum
+					I know the tale you are trying to tell.
+					I see the story laid out before me in vivid detail.>
 				</div>
 				<div class="para para-6">
-					Lorem upsom
+					And I have the power to transform your tepid text into the flowing, emotional,
+					<span id="master">Shakespearean</span> masterpiece your epic storyline deserves!
+				</div>
+				<div class="para para-scrollbar">A
 				</div>
 			</div>
-			<div class="cell john">This is a test
-				<img class="img" src="images/aboutjohn_400px.jpg" text="About John">
+			<div class="john" id="john">
+			<!--<div class="row">-->
+				<img class="img" src="images/aboutjohn_400px.jpg" alt="John's photo"/>
+				<p>An avid reader and lifelong perfectionist, John has recently discovered his true passion<strong>: </strong>correcting other peoples' mistakes!</p>
+				<p>In all his prior work, he never could resist pointing out the little grammatical errors all 
+				around him, and after years of resisting the urge, he has finally succumbed to the 
+				inevitable and embraced his inner Grouchy Grammarian!</p>
+			<!--</div>-->
 			</div>
 		</div>
 	</div>
