Sized for medium to large screen

--- a/index.html
+++ b/index.html
@@ -60,35 +60,52 @@
 	<div class="content">
 		<!--<div class="row main">-->
 			<div class="cell vert main-scroll">
-				<div class="para para-scrollbar">A
-				</div>
-				<div class="para para-1">
-					Your story must be told.
-					It is <span id="fontepic">epic.</span> It is profound.
-					It is like nothing ever written.
-				</div>
-				<div class="para para-2">
-					But your grammar is atrocious
-					Your spelling is dreadful.
-					Your prose is lacking
-				</div>
-				<div class="para para-3">
-					Your story is one for the <span id="ages">AGES,</span> but you do not have the words
-					with which to express it.
-				</div>
-				<div class="para para-4">
-					<span id="ido">I do.</span>
-				</div>
-				<div class="para para-5">
-					I know the tale you are trying to tell.
-					I see the story laid out before me in vivid detail.>
-				</div>
-				<div class="para para-6">
-					And I have the power to transform your tepid text into the flowing, emotional,
-					<span id="master">Shakespearean</span> masterpiece your epic storyline deserves!
-				</div>
-				<div class="para para-scrollbar">A
-				</div>
+				<ul class="para para-scrollbar">A
+				</ul>
+				<ul class="para para-1">
+					<li>&nbsp;Your story must be told. </li>
+					<li>&nbsp;It is </li>
+					<li><span id="fontepic">&nbsp; epic. </span></li> 
+					<li>&nbsp;It is profound.</li>
+					<li>&nbsp;It is like nothing</li> 
+					<li>&nbsp;ever written.</li>
+				</ul>
+				<ul div class="para para-2">
+					<li>But your grammar</li> 
+					<li>&nbsp;is atrocious</li>
+					<li>&nbsp;Your spelling</li> 
+					<li>&nbsp;is dreadful.</li>
+					<li>&nbsp;Your prose</li> 
+					<li>&nbsp;is lacking</li>
+				</ul>
+				<ul div class="para para-3">
+					<li>Your story is one for the </li>
+					<li><span id="ages">&nbsp; AGES, </span> </li>
+					<li>&nbsp;but 
+					<li>&nbsp;you do not have the words</li>
+					<li>&nbsp;with which to express it.</li>
+				</ul>
+				<ul div class="para para-4">
+					<li><span id="ido">I do.</span></li>
+				</ul>
+				<ul div class="para para-5">
+					<li>I know the tale you </li>
+					<li>&nbsp;are trying to tell.</li>
+					<li>&nbsp;I see the story laid out </li>
+					<li>&nbsp;before me in vivid detail.</li>
+				</ul>
+				<ul div class="para para-6">
+					<li>And I have the power </li>
+					<li>&nbsp;to transform your tepid text </li>
+					<li>&nbsp;into the </li> 
+					<li>&nbsp;flowing, emotional, </li>
+					<li><span id="master">&nbsp; Shakespearean </span></li> 
+					<li>&nbsp;masterpiece your</li>
+					<li>&nbsp;epic storyline </li>
+					<li>&nbsp;deserves!</li>
+				</ul>
+				<ul class="para para-scrollbar">A
+				</ul>
 			</div>
 			<div class="john" id="john">
 			<!--<div class="row">-->
