--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
 <body>
 	<div class="container first-container">
 		<nav class="navbar navbar-inverse navbar-fixed-top">
-			<div class="container">
+			<div class="container navcell">
 				<a class="navbar-brand" href="#">SST</a>
-				<button class="navbar-toggle" data-target=".navbar-responsive-collapse" data-toggle="collapse" type="button">
+				<button class="navitem navbar-toggle" data-target=".navbar-responsive-collapse" data-toggle="collapse" type="button">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<div class="navbar-collapse collapse navbar-responsive-collapse">
-					<ul class="nav navbar-nav">
-						<li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-						<li><a href="#"><span class="glyphicon glyphicon-edit"></span> Services & Rates</a></li>
-						<li><a href="#"><span class="glyphicon glyphicon-book"></span> Portfolio</a></li>
-						<li><a href="contactForm.html"><span class="glyphicon glyphicon-user"></span> About/Contact John</a></li>
-						<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
+				<div class="navitem navbar-collapse collapse navbar-responsive-collapse">
+					<ul class="nav navcell navbar-nav">
+						<li class="active"><a href="#"><span class="navitem glyphicon glyphicon-home"></span> Home</a></li>
+						<li><a href="#"><span class="navitem glyphicon glyphicon-edit"></span> Services & Rates</a></li>
+						<li><a href="#"><span class="navitem glyphicon glyphicon-book"></span> Portfolio</a></li>
+						<li><a href="contactForm.html"><span class="navitem glyphicon glyphicon-user"></span> About/Contact John</a></li>
+						<li><a href="#"><span class="navitem glyphicon glyphicon-log-in"></span> Log In</a></li>
 					</ul>
-					<form class="navbar-form float-right">
+					<form class="navcell navbar-form float-right">
 						<input type="text" class="form-control" placeholder="Search" id="searchinput">
-							<button type="submit" class="btn btn-default">
-								<span class="glyphicon glyphicon-search"></span>
+							<button type="navbtm submit" class="btn btn-default">
+								<span class="navitem glyphicon glyphicon-search"></span>
 							</button>
 						</input>
 					</form>
 				</div><!-- Nav-collapse -->
 			</div><!-- Container -->
 		</nav>
-	</div><!--Container-->
+	</div>--><!--Container-->
 	<header>
 		<div class="container header-container">
 				<div class="banner header-scroll img-responsive">
@@ -63,9 +63,9 @@
 				<ul class="para para-scrollbar">A
 				</ul>
 				<ul class="para para-1">
-					<li>&nbsp;Your story must be told. </li>
-					<li>&nbsp;It is </li>
-					<li><span id="fontepic">&nbsp; epic. </span></li> 
+					<li>&nbsp;Your story must be told.</li>
+					<li>&nbsp;It is</li>
+					<li><span id="fontepic">&nbsp;epic.</span></li> 
 					<li>&nbsp;It is profound.</li>
 					<li>&nbsp;It is like nothing</li> 
 					<li>&nbsp;ever written.</li>
@@ -79,42 +79,42 @@
 					<li>&nbsp;is lacking</li>
 				</ul>
 				<ul div class="para para-3">
-					<li>Your story is one for the </li>
-					<li><span id="ages">&nbsp; AGES, </span> </li>
-					<li>&nbsp;but 
-					<li>&nbsp;you do not have the words</li>
-					<li>&nbsp;with which to express it.</li>
+					<li>Your story is one for the</li>
+					<li><span id="ages">&nbsp;AGES,</span> </li>
+					<li>but you</li>
+					<li>&nbsp;do not</li> 
+					<li>&nbsp;have the words</li>
+					<li>&nbsp;with which</li>
+					<li>&nbsp;to express it.</li>
 				</ul>
 				<ul div class="para para-4">
 					<li><span id="ido">I do.</span></li>
 				</ul>
 				<ul div class="para para-5">
-					<li>I know the tale you </li>
+					<li>I know the tale you</li>
 					<li>&nbsp;are trying to tell.</li>
-					<li>&nbsp;I see the story laid out </li>
+					<li>&nbsp;I see the story laid out</li>
 					<li>&nbsp;before me in vivid detail.</li>
 				</ul>
 				<ul div class="para para-6">
-					<li>And I have the power </li>
-					<li>&nbsp;to transform your tepid text </li>
-					<li>&nbsp;into the </li> 
-					<li>&nbsp;flowing, emotional, </li>
-					<li><span id="master">&nbsp; Shakespearean </span></li> 
+					<li>And I have the power</li>
+					<li>&nbsp;to transform your tepid text</li>
+					<li>&nbsp;into the</li> 
+					<li>&nbsp;flowing, emotional,</li>
+					<li><span id="master">&nbsp; Shakespearean</span></li> 
 					<li>&nbsp;masterpiece your</li>
-					<li>&nbsp;epic storyline </li>
+					<li>&nbsp;epic storyline</li>
 					<li>&nbsp;deserves!</li>
 				</ul>
 				<ul class="para para-scrollbar">A
 				</ul>
 			</div>
 			<div class="john" id="john">
-			<!--<div class="row">-->
 				<img class="img" src="images/aboutjohn_400px.jpg" alt="John's photo"/>
 				<p>An avid reader and lifelong perfectionist, John has recently discovered his true passion<strong>: </strong>correcting other peoples' mistakes!</p>
 				<p>In all his prior work, he never could resist pointing out the little grammatical errors all 
 				around him, and after years of resisting the urge, he has finally succumbed to the 
 				inevitable and embraced his inner Grouchy Grammarian!</p>
-			<!--</div>-->
 			</div>
 		</div>
 	</div>
