before navigation bar

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				</div><!-- Nav-collapse -->
 			</div><!-- Container -->
 		</nav>
-	</div>--><!--Container-->
+	</div><!--Container-->
 	<header>
 		<div class="container header-container">
 				<div class="banner header-scroll img-responsive">
@@ -110,11 +110,14 @@
 				</ul>
 			</div>
 			<div class="john" id="john">
+				<div class="col-sm-12">
+				<h1 class="name col-sm-12">John Davidson</h1>
 				<img class="img" src="images/aboutjohn_400px.jpg" alt="John's photo"/>
 				<p>An avid reader and lifelong perfectionist, John has recently discovered his true passion<strong>: </strong>correcting other peoples' mistakes!</p>
 				<p>In all his prior work, he never could resist pointing out the little grammatical errors all 
 				around him, and after years of resisting the urge, he has finally succumbed to the 
 				inevitable and embraced his inner Grouchy Grammarian!</p>
+				</div>
 			</div>
 		</div>
 	</div>
