--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Nothing+You+Could+Do' rel='stylesheet' type='text/css'>	
 	<link rel="stylesheet" type="text/css" media="all" href="css/custom.css"/>
+	<link rel="stylesheet" type="text/css" media="all" href="css/navbar.css"/>
 </head>
 <body>
 	<div class="container first-container">
@@ -28,7 +29,7 @@
 						<li><a href="contactForm.html"><span class="navitem glyphicon glyphicon-user"></span> About/Contact John</a></li>
 						<li><a href="#"><span class="navitem glyphicon glyphicon-log-in"></span> Log In</a></li>
 					</ul>
-					<form class="navcell navbar-form float-right">
+					<form class="navcell navbar-form">
 						<input type="text" class="form-control" placeholder="Search" id="searchinput">
 							<button type="navbtm submit" class="btn btn-default">
 								<span class="navitem glyphicon glyphicon-search"></span>
