Navbar brand font changed to red

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="container first-container">
 		<nav class="navbar navbar-inverse navbar-fixed-top">
-			<div class="container navcell">
+			<div class="container navcell flex-navbar">
 				<a class="navbar-brand" href="#">SST</a>
 				<button class="navitem navbar-toggle" data-target=".navbar-responsive-collapse" data-toggle="collapse" type="button">
 					<span class="icon-bar"></span>
